# itk-experiments-archive

./: CMakeLists.txt
AtlasSelectionTool/: AtlasSelectionTool.cxx  CMakeLists.txt
CSFRemover/: CMakeLists.txt  CSFRemover.cxx
ClassificationCleaner/: CMakeLists.txt  ClassificationCleaner.cxx
ITKSetupTest/: CMakeLists.txt  ITKSetupTest.cxx
LabelMapCombiner/: CMakeLists.txt  LabelMapCombiner.cxx
MorphOperation/: CMakeLists.txt  MorphOperation.cxx
VTKSetupTest/: CMakeLists.txt  VTKSetupTest.cpp
python/: DicomSeriesReadImageWrite2.py  LabelMapCombiner.py  OrientScalarVolume.py
scripts/: builddeb.sh  compile-shared.sh  compile-static.sh  compile.sh
scripts/docker_build_environment/: Dockerfile
util/: XGetopt.cpp  XGetopt.h
